package module_spain;

/**
 * @author Richard Hass
 */
public class App {

    public static void main(String[] args) {
        Spain spain = new Spain();

        System.out.println(spain.getAverageAge());
        System.out.println(spain.getYoungestPlayer());
        System.out.println(spain.getOldestPlayer());


    }
}
