@startuml

title __MODULE_SPAIN's Class Diagram__\n

  namespace module_spain {
    class module_spain.App {
        {static} + main()
    }
  }
  

  namespace module_spain {
    abstract class module_spain.Person {
        - name : String
        + Person()
        + Person()
        + getName()
        + setName()
    }
  }
  

  namespace module_spain {
    class module_spain.Player {
        - birthDate : LocalDate
        - currentClub : String
        - height : Double
        - nickname : String
        - number : int
        - position : String
        - weight : Double
        + Player()
        + Player()
        + getBirthDate()
        + getCurrentClub()
        + getHeight()
        + getNickname()
        + getNumber()
        + getPosition()
        + getWeight()
        + setBirthDate()
        + setCurrentClub()
        + setHeight()
        + setNickname()
        + setNumber()
        + setPosition()
        + setWeight()
    }
  }
  

  namespace module_spain {
    class module_spain.PressOfficer {
        - emailAccount : String
        - tel1 : String
        - tel2 : String
        + PressOfficer()
        + PressOfficer()
        + getEmailAccount()
        + getTel1()
        + getTel2()
        + setEmailAccount()
        + setTel1()
        + setTel2()
    }
  }
  

  namespace module_spain {
    class module_spain.Spain {
        ~ nationalTeamStats : NationalTeamStats
        + Spain()
        + getAverageAge()
        + getCountryName()
        + getFlagImage()
        + getHowManyMembers()
        + getOldestPlayer()
        + getPlayer()
        + getPressOfficerContacts()
        + getSpainDAO()
        + getStatsResponsible()
        + getTechnicalCommittee()
        + getYoungestPlayer()
        - getAgeByBirthDate()
    }
  }
  

  namespace module_spain {
    class module_spain.SpainDAO {
        {static} - INSTANCE : SpainDAO
        - players : List<Player>
        - pressOfficers : List<PressOfficer>
        - technicalCommittees : List<TechnicalCommittee>
        {static} + getInstance()
        + getPeopleSize()
        + getPlayers()
        + getPressOfficers()
        + getTechnicalCommittees()
        - SpainDAO()
    }
  }
  

  namespace module_spain {
    class module_spain.SpainStats {
        + getHowManyCallsToPlayer()
        + getHowManyQuestions()
    }
  }
  

  namespace module_spain {
    class module_spain.TechnicalCommittee {
        - age : Integer
        - nickname : String
        - role : String
        + TechnicalCommittee()
        + TechnicalCommittee()
        + getAge()
        + getNickname()
        + getRole()
        + setAge()
        + setNickname()
        + setRole()
    }
  }
  

  module_spain.Player -up-|> module_spain.Person
  module_spain.PressOfficer -up-|> module_spain.Person
  module_spain.Spain .up.|> fifa.NationalTeamInfos
  module_spain.Spain o-- module_spain.SpainDAO : spainDAO
  module_spain.SpainStats .up.|> fifa.NationalTeamStats
  module_spain.TechnicalCommittee -up-|> module_spain.Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
